--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start app.js",
+    "start": "pm2 web && pm2 start app.js",
     "test": "mocha"
   },
   "author": "",
